--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <title>Logo</title>
 <head>
 <style>
 body {
@@ -28,7 +29,8 @@ body {
      .ossssssssssssssssss<font style="color:white;">dMMMNy</font>sssso.<br>
        -+sssssssssssssssss<font style="color:white;">yyy</font>ssss+-<br>
          `:+ssssssssssssssssss+:`<br>
-             .-/+oossssoo+/-.<br>
+             .-/+oossssoo+/-.<br><br>
+                          <font style="color:white;font-size:3.55rem;">UBUNTU</font>
              </center>
 
 </head>
